--- a/前端/index.html
+++ b/前端/index.html
@@ -22,7 +22,7 @@
 <ul>
 <li><a href="#" onclick="Show('rule')">企业信息</a>
 <ul id="rule">
-<li><a href="#">完善企业信息</a></li>
+<li><a href="detail.html" target="detail">完善企业信息</a></li>
 </ul>
 </li>
 <li><a href="#" onclick="Show('sheet')">人力资源表格</a>
@@ -30,12 +30,17 @@
 <li><a href="#">填写调查期表格</a></li>
 </ul>
 </li>
+<li><a href="#" onclick="Show('inform')">通知信息</a>
+<ul id="inform">
+<li><a href="#">查看通知</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </form>
 
 <div id="mainbody">
-<iframe id="main" src="ttt.html" width="850" height="500" frameborder="0" name="detail"></iframe>
+<iframe id="main" src="index.html" width="850" height="500" frameborder="0" name="detail"></iframe>
 </div>
 
 <div id="footer">
