--- a/前端/index.html
+++ b/前端/index.html
@@ -44,7 +44,7 @@
 </form>
 
 <div id="mainbody">
-<iframe id="main" src="index.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
+<iframe id="main" src="cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
 </div>
 
 <div id="footer">
