新加用户登录标识，字体大小更改

--- a/前端/detail.html
+++ b/前端/detail.html
@@ -23,7 +23,7 @@ function changePage()
 <table id="information" border="0" align="center">
 <tr>
  <td>
- <form name="LocalInput" action="" method="get">
+ <form name="LocalInput" action="" method="post">
  *所属地区：
  <br />
  <input type="text" name="Local"/>
@@ -33,7 +33,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="CompanyCodeInput" action="" method="get">
+ <form name="CompanyCodeInput" action="" method="post">
  *组织机构代码：
  <br />
  <input type="text" name="CompanyCode"/>
@@ -43,7 +43,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="CompanyNameInput" action="" method="get">
+ <form name="CompanyNameInput" action="" method="post">
  *企业名称：
  <br />
  <input type="text" name="CompanyName"/>
@@ -53,7 +53,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="CompanyNatureInput" action="" method="get">
+ <form name="CompanyNatureInput" action="" method="post">
  *企业性质：
  <br />
    <select name="CompanyNature" style="width:146px;">
@@ -66,7 +66,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="IndustryInvolvedInput" action="" method="get">
+ <form name="IndustryInvolvedInput" action="" method="post">
  *所属行业：
  <br />
    <select name="IndustryInvolved" style="width:146px;">
@@ -79,7 +79,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="MainManageInput" action="" method="get">
+ <form name="MainManageInput" action="" method="post">
  *主要经营业务：
  <br />
  <input type="text" name="MainManage"/>
@@ -89,7 +89,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="LinkManInput" action="" method="get">
+ <form name="LinkManInput" action="" method="post">
  *联系人：
  <br />
  <input type="text" name="LinkMan"/>
@@ -99,7 +99,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="LinkAddressInput" action="" method="get">
+ <form name="LinkAddressInput" action="" method="post">
  *联系地址：
  <br />
  <input type="text" name="LinkAddress"/>
@@ -109,7 +109,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="PostCodeInput" action="" method="get">
+ <form name="PostCodeInput" action="" method="post">
  *邮政编码（6位）：
  <br />
  <input type="text" name="PostCode"/>
@@ -119,7 +119,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="PhoneNumberInput" action="" method="get">
+ <form name="PhoneNumberInput" action="" method="post">
  *联系电话：
  <br />
  <input type="text" name="PhoneNumber"/>
@@ -129,7 +129,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="FaxInput" action="" method="get">
+ <form name="FaxInput" action="" method="post">
  *传真：
  <br />
  <input type="text" name="Fax"/>
@@ -139,7 +139,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="EmailInput" action="" method="get">
+ <form name="EmailInput" action="" method="post">
  EMAIL(xxx@xxx.xxx)：
  <br />
  <input type="text" name="Email"/>
@@ -149,7 +149,7 @@ function changePage()
 
 <tr>
  <td>
- <form name="sure" action="" method="get">
+ <form name="sure" action="" method="post">
  <input type="submit" value="确认"/>
  <input type="button" value="返回" onclick="changePage()"/>
  </form>
