--- a/前端/index.html
+++ b/前端/index.html
@@ -3,6 +3,12 @@
 <head>
  <title>山东省人力资源市场数据采集系统</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<style type="text/css">
+.current {
+	font-size:25;
+	font-weight:bold;
+}
+</style>
 </head>
 
 <head>
@@ -14,7 +20,10 @@
 <div id="container">
 
 <div id="header">
-<h1>山东省人力资源</h1>
+<pre class="current">  
+山东省人力资源市场数据采集系统                                           当前用户：
+                                                                           张天利[企业用户]
+</pre>
 </div>
 
 <form id="form1" runat="server">
@@ -48,7 +57,7 @@
 </div>
 
 <div id="footer">
-copyright ShangDong
+山东省人力资源
 </div>
 
 </div>
