--- a/前端/login.html
+++ b/前端/login.html
@@ -22,7 +22,7 @@
 			<li id="l2" class="li"><a onclick="UserChange(1)" href="javascript:void(0)">企业用户登录</a></li>
 		</ul>
 	</div>
-	<form id="login-container">
+	<form id="login-container" name="Login" action="" method="post">
         <table>
             <tr><th><input type="text" id="PID" name="PID" placeholder="用户名"/></th></tr>
             <tr><th><input type="password" id="psw" name="psw" placeholder="密码"/></th></tr>
