--- a/前端/index.html
+++ b/前端/index.html
@@ -10,6 +10,7 @@
 	color:#ffffff;
 }
 </style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <head>
@@ -21,10 +22,9 @@
 <div id="container">
 
 <div id="header">
-<pre class="current">  
-山东省人力资源市场数据采集系统                                           当前用户：
-                                                                           张天利[企业用户]
-</pre>
+        <div id="logo"></div>
+		<span id="title">山东省人力资源市场数据采集系统</span>
+		<span id="name">当前用户：Bigblack(省级)</span>
 </div>
 
 <form id="form1" runat="server">
