--- a/前端/index.html
+++ b/前端/index.html
@@ -16,9 +16,15 @@
 <head>
 <script src="js/loadFun.js" type="text/javascript"></script>
 <script src="js/Show.js" type="text/javascript"></script>
+<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
+<script>
+function resize(){
+	$("#mainbody").width(window.innerWidth - $("#menu").width() - 22);
+}
+</script>
 </head>
 
-<body onload="loadFun()">
+<body onload="loadFun()" onResize="resize()">
 <div id="container">
 
 <div id="header">
