--- a/前端/province.html
+++ b/前端/province.html
@@ -9,8 +9,7 @@
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/province.css" media="screen" type="text/css" />
 	<script src="js/loadFun.js" type="text/javascript"></script>
-	<script src="js/index.js" type="text/javascript"></script>
-	<script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+	<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
 </head>
 
 <body onload="loadFun()">
@@ -21,47 +20,116 @@
 		<span id="name">Bigblack(省级)</span>
 	</div>
 	
-	<div id="menu" style="overflow:hidden; outline:none">
+	<div id="menu">
 		
-		<div id="menu_header"><img src="img/button_menu.png" width="20px" height="20px"/></div>
 		<div id="menu_container">
 			<ul id="accordion" class="accordion">
-				<li>
-					<div class="link"><i class="fa fa-paint-brush"></i>第一个标题<i class="fa fa-chevron-down"></i><div>
-					<ul class="submenu">
-					<li><a href="#">第一个的第一个</a></li>
-					<li><a href="#">第一个的第二个</a></li>
-					<li><a href="#">第一个的第三个</a></li>
+				<li id="l0">
+					<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业管理<i class="fa fa-chevron-down"></i></div>
+					<ul class="submenu" id="u0">
+					<li><a href="#">企业备案查询</a></li>
 					</ul>
 				</li>
-				<li>
-					<div class="link"><i class="fa fa-code"></i>第二个标题<i class="fa fa-chevron-down"></i><div>
-					<ul class="submenu">
-					<li><a href="#">第二个的第一个</a></li>
-					<li><a href="#">第二个的第二个</a></li>
-					<li><a href="#">第二个的第三个</a></li>
+				<li id="l1">
+					<div class="link" onclick="change(1)"><i class="fa fa-table"></i>报表管理<i class="fa fa-chevron-down"></i></div>
+					<ul class="submenu" id="u1">
+					<li><a href="#">审核报表</a></li>
+					<li><a href="#">数据汇总</a></li>
 					</ul>
 				</li>
-				<li>
-					<div class="link"><i class="fa fa-mobile"></i>第三个标题<i class="fa fa-chevron-down"></i><div>
-					<ul class="submenu">
-					<li><a href="#">第三个的第一个</a></li>
-					<li><a href="#">第三个的第二个</a></li>
-					<li><a href="#">第三个的第三个</a></li>
+				<li id="l2">
+					<div class="link" onclick="change(2)"><i class="fa fa-bar-chart"></i>数据分析<i class="fa fa-chevron-down"></i></div>
+					<ul class="submenu" id="u2">
+					<li><a href="#">取样分析</a></li>
+					<li><a href="#">对比分析</a></li>
+					<li><a href="#">趋势分析</a></li>
 					</ul>
 				</li>
-				<li>
-					<div class="link"><i class="fa fa-globe"></i>第四个标题<i class="fa fa-chevron-down"></i><div>
-					<ul class="submenu">
-					<li><a href="#">第四个的第一个</a></li>
-					<li><a href="#">第四个的第二个</a></li>
-					<li><a href="#">第四个的第三个</a></li>
+				<li id="l3">
+					<div class="link" onclick="change(3)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
+					<ul class="submenu" id="u3">
+					<li><a href="#">查看通知</a></li>
+					<li><a href="#">发布通知</a></li>
+					</ul>
+				</li>
+				<li id="l4">
+					<div class="link" onclick="change(4)"><i class="fa fa-cogs"></i>系统管理<i class="fa fa-chevron-down"></i></div>
+					<ul class="submenu" id="u4">
+					<li><a href="#">上报时限</a></li>
+					<li><a href="#">用户管理</a></li>
+					<li><a href="#">角色管理</a></li>
+					<li><a href="#">系统监控</a></li>
 					</ul>
 				</li>
 			</ul>
 		</div>
 		
 	</div>
+	
+	<script type="text/javascript">
+		function change(a){
+			if(a==0){
+				$("#u0").slideToggle();
+				$('#l0').toggleClass('open');	
+				$("#u1").slideUp();
+				$('#l1').removeClass('open');
+				$("#u2").slideUp();
+				$('#l2').removeClass('open');
+				$("#u3").slideUp();
+				$('#l3').removeClass('open');
+				$("#u4").slideUp();
+				$('#l4').removeClass('open');
+			}
+			if(a==1){
+				$("#u1").slideToggle();
+				$('#l1').toggleClass('open');
+				$("#u0").slideUp();
+				$('#l0').removeClass('open');
+				$("#u2").slideUp();
+				$('#l2').removeClass('open');
+				$("#u3").slideUp();
+				$('#l3').removeClass('open');
+				$("#u4").slideUp();
+				$('#l4').removeClass('open');
+			}
+			if(a==2){
+				$("#u2").slideToggle();
+				$('#l2').toggleClass('open');
+				$("#u1").slideUp();
+				$('#l1').removeClass('open');
+				$("#u0").slideUp();
+				$('#l0').removeClass('open');
+				$("#u3").slideUp();
+				$('#l3').removeClass('open');
+				$("#u4").slideUp();
+				$('#l4').removeClass('open');
+			}
+			if(a==3){
+				$("#u3").slideToggle();
+				$('#l3').toggleClass('open');
+				$("#u1").slideUp();
+				$('#l1').removeClass('open');
+				$("#u2").slideUp();
+				$('#l2').removeClass('open');
+				$("#u0").slideUp();
+				$('#l0').removeClass('open');
+				$("#u4").slideUp();
+				$('#l4').removeClass('open');
+			}
+			if(a==4){
+				$("#u4").slideToggle();
+				$('#l4').toggleClass('open');
+				$("#u1").slideUp();
+				$('#l1').removeClass('open');
+				$("#u2").slideUp();
+				$('#l2').removeClass('open');
+				$("#u3").slideUp();
+				$('#l3').removeClass('open');
+				$("#u0").slideUp();
+				$('#l0').removeClass('open');
+			}
+		}
+	</script>
 
 	<div id="mainbody">
 		<iframe id="main" src="cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
