--- a/前端/province.html
+++ b/前端/province.html
@@ -9,7 +9,13 @@
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/province.css" media="screen" type="text/css" />
 	<script src="js/loadFun.js" type="text/javascript"></script>
+	<script src="js/Show.js" type="text/javascript"></script>
 	<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
+	<script>
+		function resize(){
+			$("#mainbody").width(window.innerWidth - $("#menu").width() - 22);
+		}
+	</script>
 </head>
 
 <body onload="loadFun()">
@@ -74,72 +80,6 @@
 		
 	</div>
 	
-	<script type="text/javascript">
-		
-		function change(a){
-			if(a==0){
-				$("#u0").slideToggle();
-				$('#l0').toggleClass('open');	
-				$("#u1").slideUp();
-				$('#l1').removeClass('open');
-				$("#u2").slideUp();
-				$('#l2').removeClass('open');
-				$("#u3").slideUp();
-				$('#l3').removeClass('open');
-				$("#u4").slideUp();
-				$('#l4').removeClass('open');
-			}
-			if(a==1){
-				$("#u1").slideToggle();
-				$('#l1').toggleClass('open');
-				$("#u0").slideUp();
-				$('#l0').removeClass('open');
-				$("#u2").slideUp();
-				$('#l2').removeClass('open');
-				$("#u3").slideUp();
-				$('#l3').removeClass('open');
-				$("#u4").slideUp();
-				$('#l4').removeClass('open');
-			}
-			if(a==2){
-				$("#u2").slideToggle();
-				$('#l2').toggleClass('open');
-				$("#u1").slideUp();
-				$('#l1').removeClass('open');
-				$("#u0").slideUp();
-				$('#l0').removeClass('open');
-				$("#u3").slideUp();
-				$('#l3').removeClass('open');
-				$("#u4").slideUp();
-				$('#l4').removeClass('open');
-			}
-			if(a==3){
-				$("#u3").slideToggle();
-				$('#l3').toggleClass('open');
-				$("#u1").slideUp();
-				$('#l1').removeClass('open');
-				$("#u2").slideUp();
-				$('#l2').removeClass('open');
-				$("#u0").slideUp();
-				$('#l0').removeClass('open');
-				$("#u4").slideUp();
-				$('#l4').removeClass('open');
-			}
-			if(a==4){
-				$("#u4").slideToggle();
-				$('#l4').toggleClass('open');
-				$("#u1").slideUp();
-				$('#l1').removeClass('open');
-				$("#u2").slideUp();
-				$('#l2').removeClass('open');
-				$("#u3").slideUp();
-				$('#l3').removeClass('open');
-				$("#u0").slideUp();
-				$('#l0').removeClass('open');
-			}
-		}
-	</script>
-
 	<div id="mainbody">
 		<iframe id="main" src="cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
 	</div>
