--- a/前端/index.html
+++ b/前端/index.html
@@ -4,13 +4,6 @@
 	<title>山东省人力资源市场数据采集系统</title>
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<style type="text/css">
-		.current {
-			font-size:25;
-			font-weight:bold;
-			color:#ffffff;
-		}
-	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -32,7 +25,7 @@
 	<div id="header">
         <div id="logo"></div>
 		<span id="title">山东省人力资源市场数据采集系统</span>
-		<span id="name"><a style="text-decoration:none; color:#fff;" href="#" onclick="exit()">当前用户：Bigblack(省级)</a></span>
+		<span id="name"><a style="text-decoration:none; color:#fff;" href="#" onclick="exit()">当前用户：Bigblack(企业用户)</a></span>
 	</div>
 	
 	<a style="text-decoration:none; color:#fff;" href="#"><div id="exit">退出登录</div></a>
@@ -50,19 +43,19 @@
 			<li id="l0">
 				<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业信息<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u0">
-					<li><a href="#">完善企业信息</a></li>
+					<li><a href="detail.html" target="inform">完善企业信息</a></li>
 				</ul>
 			</li>
 			<li id="l1">
 				<div class="link" onclick="change(1)"><i class="fa fa-table"></i>人力资源表格<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u1">
-					<li><a href="#">填写调查期表格</a></li>
+					<li><a href="survey.html" target="inform">填写调查期表格</a></li>
 				</ul>
 			</li>
 			<li id="l2">
 				<div class="link" onclick="change(2)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u2">
-				<li><a href="#">查看通知</a></li>
+				<li><a href="inform.html" target="inform">查看通知</a></li>
 				</ul>
 			</li>
 		</ul>
