--- a/前端/province.html
+++ b/前端/province.html
@@ -69,8 +69,8 @@
 				<li id="l4">
 					<div class="link" onclick="change(4)"><i class="fa fa-cogs"></i>系统管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u4">
-					<li><a href="#">上报时限</a></li>
-					<li><a href="#">用户管理</a></li>
+					<li><a href="SubmitTime.html" target="inform">上报时限</a></li>
+					<li><a href="UserManage.html" target="inform">用户管理</a></li>
 					<li><a href="#">角色管理</a></li>
 					<li><a href="#">系统监控</a></li>
 					</ul>
