--- a/前端/notice.html
+++ b/前端/notice.html
@@ -18,18 +18,38 @@
 		</div>
 		
 		<div class="type">
+			<span>通知类型</span>
+			<a class="typea" href="#">省通知</a>
+			<a class="typea" href="#">企业通知</a>
 		</div>
 		
 		<div class="title">
+			<span>序号</span>
+			<span style="width:300px;">通知标题</span>
+			<span>类型</span>
+			<span>发布时间</span>
 		</div>
 		
 		<div class="content">
+			<div class="cstyle">
+				<span>1</span>
+				<span style="width:300px;">标题</span>
+				<span>省</span>
+				<span>2016/03/24</span>
+			</div>
+			<div class="cstyle">
+				<span>2</span>
+				<span style="width:300px;">标题</span>
+				<span>省</span>
+				<span>2016/03/24</span>
+			</div>
 		</div>
 		
 		<div class="i-foot">
 			<input type="submit" id="del" name="del" value="删除"/>
 			<input type="submit" id="modify" name="modify" value="修改"/>
 			<input type="submit" id="new" name="new" value="新建"/>
+			<input type="submit" id="look" name="look" value="查看">
 		</div>
 	
 	</div>
