--- a/前端/province.html
+++ b/前端/province.html
@@ -62,7 +62,7 @@
 				<li id="l3">
 					<div class="link" onclick="change(3)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u3">
-					<li><a href="notice.html" target="inform">查看通知</a></li>
+					<li><a href="NoticeDetail.html" target="inform">查看通知</a></li>
 					<li><a href="PublishNotice.html" target="inform">发布通知</a></li>
 					</ul>
 				</li>
