--- a/前端/detail.html
+++ b/前端/detail.html
@@ -59,7 +59,11 @@ function changePage()
  <form name="CompanyNatureInput" action="" method="post">
  *企业性质：
  <br />
-   <select name="CompanyNature" style="width:146px;">
+   <select name="CompanyNature1" style="width:146px;">
+   <option value="一级">一级</option>
+   <option value="二级">二级</option>
+   </select>
+   <select name="CompanyNature2" style="width:146px;">
    <option value="一级">一级</option>
    <option value="二级">二级</option>
    </select>
@@ -72,7 +76,11 @@ function changePage()
  <form name="IndustryInvolvedInput" action="" method="post">
  *所属行业：
  <br />
-   <select name="IndustryInvolved" style="width:146px;">
+   <select name="IndustryInvolved1" style="width:146px;">
+   <option value="一级">一级</option>
+   <option value="二级">二级</option>
+   </select>
+   <select name="IndustryInvolved2" style="width:146px;">
    <option value="一级">一级</option>
    <option value="二级">二级</option>
    </select>
