--- a/前端/UserManage.html
+++ b/前端/UserManage.html
@@ -1,7 +1,11 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>动态增删和修改表格</title>
+<style type="text/css">
+h2 {
+	color:#484848;
+}
+</style>
 <script type="text/javascript">
 function add(){
 var table1=document.getElementById("mytable").insertRow(1);
@@ -31,7 +35,7 @@ var cellss2=table4[rowss].cells[0];
 cellss2.innerHTML=document.getElementById("id2").value;
 
 var cellss3=table4[rowss].cells[2];
-cellss2.innerHTML=document.getElementById("id3").value;
+cellss3.innerHTML=document.getElementById("id3").value;
 }
 
 function change(ch){
@@ -40,24 +44,25 @@ var rowss=ch.parentNode.parentNode.rowIndex;
 
 var cellss=table3[rowss].cells[1];
 var oldR=cellss.innerHTML;
-cellss.innerHTML="<input type='text' id='id1' value='' style='border-style:none'/>";
+cellss.innerHTML="<input type='text' id='id1' value='' align='center'/>";
 document.getElementById("id1").value=oldR;
 
 var cellss2=table3[rowss].cells[0];
 var oldR2=cellss2.innerHTML;
-cellss2.innerHTML="<input type='text' id='id2' value='' style='border-style:none'/>";
+cellss2.innerHTML="<input type='text' id='id2' value='' align='center'/>";
 document.getElementById("id2").value=oldR2;
 
 var cellss3=table3[rowss].cells[2];
-var oldR3=cellss2.innerHTML;
-cellss2.innerHTML="<input type='text' id='id3' value='' style='border-style:none'/>"
+var oldR3=cellss3.innerHTML;
+cellss3.innerHTML="<input type='text' id='id3' value='' align='center'/>"
 document.getElementById("id3").value=oldR3;
 }
 </script>
 
 </head>
 <body>
-<table width="700" id="mytable" border="1" cellspacing="0" id="time">
+<h2>用户信息管理：</h2>
+<table width="100%" id="mytable" border="1" cellpadding="10" id="time" style="table-layout:fixed">
 	<tr>
 		<td width="100px">用户名</td>
 		<td width="100px">用户类型</td>
