--- a/前端/province.html
+++ b/前端/province.html
@@ -47,7 +47,7 @@
 				<li id="l1">
 					<div class="link" onclick="change(1)"><i class="fa fa-table"></i>报表管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u1">
-					<li><a href="#">审核报表</a></li>
+					<li><a href="SurveyManage.html" target="inform">审核报表</a></li>
 					<li><a href="#">数据汇总</a></li>
 					</ul>
 				</li>
