--- a/前端/SurveyManage.html
+++ b/前端/SurveyManage.html
@@ -1,33 +1,36 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="css/SurveyManage.css" media="screen" type="text/css" />
 	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
 </head>
-	
+
 <body>
 
 	<div class="container">
-	
+		
 		<div class="head">
 			<div></div>
-			<span>通知列表</span>
+			<span>报表审核</span>
 		</div>
 		
 		<div class="type">
-			<span>通知类型</span>
-			<a class="typea" href="#">省通知</a>
-			<a class="typea" href="#">企业通知</a>
+			<span>报表类型</span>
+			<a class="typea" href="#">全部</a>
+			<a class="typea" href="#">已读</a>
+			<a class="typea" href="#">未读</a>
 		</div>
 		
 		<div class="title">
 			<span>序号</span>
-			<span style="width:300px;">通知标题</span>
+			<span style="width:300px;">报表标题</span>
 			<span>类型</span>
 			<span style="width:100px;">发布时间</span>
+			<span>操作</span>
 		</div>
 		
 		<div class="content">
@@ -35,25 +38,23 @@
 				<span>1</span>
 				<span style="width:300px;">标题</span>
 				<span>省</span>
-				<span>2016/03/24</span>
+				<span style="width:100px;">2016/03/24</span>
+				<span>已审核</span>
 			</div>
 			<div class="cstyle">
 				<span>2</span>
 				<span style="width:300px;">标题</span>
 				<span>省</span>
 				<span style="width:100px;">2016/03/24</span>
+				<span>未审核</span>
 			</div>
 		</div>
 		
 		<div class="i-foot">
-			<input type="submit" id="del" name="del" value="删除"/>
-			<input type="submit" id="modify" name="modify" value="修改"/>
-			<input type="submit" id="new" name="new" value="新建"/>
-			<input type="submit" id="look" name="look" value="查看">
 		</div>
 	
 	</div>
-
+	
 </body>
 
 </html>
