--- a/前端/index.html
+++ b/前端/index.html
@@ -43,7 +43,7 @@
 			<li id="l0">
 				<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业信息<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u0">
-					<li><a href="detail.html" target="inform">完善企业信息</a></li>
+					<li><a href="detail.php" target="inform">完善企业信息</a></li>
 				</ul>
 			</li>
 			<li id="l1">
