格式统一，更改企业备案查询

--- a/前端/CompanyReference.html
+++ b/前端/CompanyReference.html
@@ -1,55 +1,33 @@
 ﻿<html>
-<body>
-
-<head>
-<style type="text/css">
-#Company {
-	background-color:#f6f6f6;
-	width:100%;
-}
-h2 {
-	color:#6f6f6f;
-}
-.I {
-	background-color:#ffffff;
-}
-#demand {
-	background-color:#f6f6f6;
-	height:60;
-	font-size:18;
-}
-</style>
-</head>
-
-<h2>已备案的企业：</h2>
-
-<form id="demand" name="Query" action="" method="post">
-<br />
-查询关键字：
-<input type="text" name="InputQuery"  class='I'/>
-<input type="submit" value="查询"/>
-</form>
-
-<table id="Company" border="0" cellpadding="50">
-
-	<tr>
-		<td><a href="CheckCompany.html" target="_blank">公司1</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司2</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司3</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司4</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司5</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司6</a></td>
-	</tr>
-	<tr>
-		<td><a href="CheckCompany.html" target="_blank">公司7</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司8</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司9</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司10</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司11</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司12</a></td>
-	</tr>
+	<head>
+		<link rel="stylesheet" href="css/CompanyReference.css" media="screen" type="text/css" />
+	</head>
 	
-</table>
-
-</body>
+	<body>
+		<div class="container">
+			<div class="head">
+				<div></div>
+				<span>已备案的企业</span>
+			</div>
+			
+			<div class="title">
+				<span>序号</span>
+				<span style="width:300px;">公司名</span>
+				<span style="width:100px;">所属市</span>
+			</div>
+			
+			<div class="content">
+				<div class="cstyle">
+					<span>1</span>
+					<span style="width:300px;"><a href="CheckCompany.html" target="_blank">章天理章天理股份有限</a></span>
+					<span style="width:100px;">济南市</span>
+				</div>
+				<div class="cstyle">
+					<span>2</span>
+					<span style="width:300px;"><a href="CheckCompany.html" target="_blank">李圈圈李圈圈PY</a></span>
+					<span style="width:100px;">青岛市</span>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
