--- a/前端/UserManage.html
+++ b/前端/UserManage.html
@@ -1,11 +1,7 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<style type="text/css">
-			h2 {
-				color:#484848;
-			}
-		</style>
+		<link rel="stylesheet" href="css/TimeAndUser.css" media="screen" type="text/css" />
 		
 		<script type="text/javascript">
 			function add(){
@@ -62,7 +58,10 @@
 	</head>
 	
 	<body>
-		<h2>用户信息管理：</h2>
+		<div class="head">
+			<div></div>
+			<span>用户信息管理</span>
+		</div>
 		<form name="input" action="" method="post">
 			<table width="100%" id="mytable" border="1" cellpadding="10" id="time" style="table-layout:fixed">
 				<tr>
