企业备案查询
企业备案查询样式修改，未加js

--- a/前端/CompanyReference.html
+++ b/前端/CompanyReference.html
@@ -1,55 +1,79 @@
 ﻿<html>
-<body>
 
 <head>
-<style type="text/css">
-#Company {
-	background-color:#f6f6f6;
-	width:100%;
-}
-h2 {
-	color:#6f6f6f;
-}
-.I {
-	background-color:#ffffff;
-}
-#demand {
-	background-color:#f6f6f6;
-	height:60;
-	font-size:18;
-}
-</style>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="css/CompanyReference.css" media="screen" type="text/css" />
 </head>
 
-<h2>已备案的企业：</h2>
+<body>
 
-<form id="demand" name="Query" action="" method="post">
-<br />
-查询关键字：
-<input type="text" name="InputQuery"  class='I'/>
-<input type="submit" value="查询"/>
-</form>
-
-<table id="Company" border="0" cellpadding="50">
-
-	<tr>
-		<td><a href="CheckCompany.html" target="_blank">公司1</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司2</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司3</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司4</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司5</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司6</a></td>
-	</tr>
-	<tr>
-		<td><a href="CheckCompany.html" target="_blank">公司7</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司8</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司9</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司10</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司11</a></td>
-		<td><a href="CheckCompany.html" target="_blank">公司12</a></td>
-	</tr>
-	
-</table>
+	<div class="container">
+		
+		<div class="head">
+			<div></div>
+			<span>企业管理</span>
+		</div>
+		
+		<div class="query">
+			<span>查询</span>
+			<input type="text" id="query" name="query"/>
+		</div>
+		
+		<div class="title">
+			<span style="width:400px;">企业名称</span>
+			<span >所属地区</span>
+			<span >企业性质</span>
+			<span >所属行业</span>
+		</div>
+		
+		<div class="content">
+			<div class="cstyle">
+				<span style="width:400px;">XX企业</span>
+				<span>山东济南</span>
+				<span>私企</span>
+				<span>家私</span>
+			</div>
+			<div class="cstyle">
+				<span style="width:400px;">XX企业</span>
+				<span>山东济南</span>
+				<span>私企</span>
+				<span>家私</span>
+			</div>
+			<div class="cstyle">
+				<span style="width:400px;">XX企业</span>
+				<span>山东济南</span>
+				<span>私企</span>
+				<span>家私</span>
+			</div>
+			<div class="cstyle">
+				<span style="width:400px;">XX企业</span>
+				<span>山东济南</span>
+				<span>私企</span>
+				<span>家私</span>
+			</div>
+			<div class="cstyle">
+				<span style="width:400px;">XX企业</span>
+				<span>山东济南</span>
+				<span>私企</span>
+				<span>家私</span>
+			</div>
+		</div>
+		
+		<div id="c-foot">
+			
+			<a href="#">上一页</a>
+			<a href="#">1</a>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">下一页</a>
+		
+		</div>
 
 </body>
 </html>
