--- a/前端/CompanyReference.html
+++ b/前端/CompanyReference.html
@@ -1,5 +1,4 @@
 ﻿<html>
-<<<<<<< HEAD
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,7 +17,7 @@
 		
 		<div class="head">
 			<div></div>
-			<span>已备案的企业</span>
+			<span>已备案企业</span>
 		</div>
 		
 		<div class="query">
