--- a/前端/province.html
+++ b/前端/province.html
@@ -41,7 +41,7 @@
 				<li id="l0">
 					<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u0">
-					<li><a href="CompanyReference.html" target="inform">企业备案查询</a></li>
+					<li><a href="CompanyDetail.html" target="inform">企业备案查询</a></li>
 					</ul>
 				</li>
 				<li id="l1">
