--- a/前端/CheckSurvey.html
+++ b/前端/CheckSurvey.html
@@ -24,7 +24,7 @@
 			<input type="submit" value="查询"/>
 		</form>
 
-		<table border="1" cellpadding="5" width="100%">
+		<table border="1" cellpadding="5" width="100%" style="table-layout:fixed">
 			<tr>
 				<td align="center">表格名称</td>
 				<td align="center">调查期</td>
