--- a/前端/detail.html
+++ b/前端/detail.html
@@ -1,15 +1,7 @@
 <html>
 	<head>
 		<title>山东省人力资源市场数据采集系统</title>
-		<style type="text/css">
-			#information {
-				background-color:#f6f6f6;
-				width:100%;
-			}
-			h2 {
-				color:#484848;
-			}
-		</style>
+		<link rel="stylesheet" href="css/Detail.css" media="screen" type="text/css" />
 		<script>
 			function changePage(){
 				window.location.href="cover.html";
@@ -18,7 +10,10 @@
 	</head>
 
 	<body>
-		<h2>完善企业信息:</h2>
+		<div class="head">
+			<div></div>
+			<span>完善企业信息</span>
+		</div>
 		<form name="LocalInput" action="" method="post">
 			<table id="information" border="0" align="center">
 				<tr>
