--- a/前端/survey.html
+++ b/前端/survey.html
@@ -1,23 +1,7 @@
 <html>
 	<head>
 		<title>山东省人力资源市场数据采集系统</title>
-		<style type="text/css">
-			.I {
-				background-color:#ffffff;
-			}
-			#demand {
-				background-color:#f6f6f6;
-				height:60;
-				font-size:18;
-			}
-			#information {
-				background-color:#f6f6f6;
-				width:100%;
-			}
-			h2 {
-				color:#484848;
-			}
-		</style>
+		<link rel="stylesheet" href="css/Survey.css" media="screen" type="text/css" />
 		<script>
 			function changePage()
 			{
@@ -27,7 +11,10 @@
 	</head>
 	
 	<body>
-		<h2>调查期：3月份至4月份</h2>
+		<div class="head">
+			<div></div>
+			<span>调查期：3月到4月</span>
+		</div>
 		<form name="InputSurvey" action="" method="">
 			<table id="information" border="0" align="center">
 				<tr>
