数据分析页面框架

--- a/前端/province.html
+++ b/前端/province.html
@@ -54,9 +54,9 @@
 				<li id="l2">
 					<div class="link" onclick="change(2)"><i class="fa fa-bar-chart"></i>数据分析<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u2">
-					<li><a href="#">取样分析</a></li>
-					<li><a href="#">对比分析</a></li>
-					<li><a href="#">趋势分析</a></li>
+					<li><a href="sampling.html" target="inform">取样分析</a></li>
+					<li><a href="compare.html" target="inform">对比分析</a></li>
+					<li><a href="trend.html" target="inform">趋势分析</a></li>
 					</ul>
 				</li>
 				<li id="l3">
