--- a/前端/compare.html
+++ b/前端/compare.html
@@ -5,7 +5,66 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+	<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
+	<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
 	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="css/compare.css" media="screen" type="text/css" />
+	<script>
+		$(function () {
+		$("#picture").highcharts({
+				title: {
+					text: "调查期企业岗位变动情况",
+					x: -20 //center
+				},
+				subtitle: {
+					text: "来自企业报表",
+					x: -20
+				},
+				xAxis: {
+					categories: ["一月", "二月", "三月", "四月", "五月", "六月","七月", "八月", "九月", "十月", "十一月", "十二月"]
+				},
+				yAxis: {
+					title: {
+						text: "数量"
+					},
+					plotLines: [{
+						value: 0,
+						width: 1,
+						color: "#808080"
+					}]
+				},
+				tooltip: {
+					valueSuffix: ""
+				},
+				legend: {
+					layout: "vertical",
+					align: "right",
+					verticalAlign: "middle",
+					borderWidth: 0
+				},
+				series: [{
+					name: "企业总数",
+					data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+				}, {
+					name: "建档期总岗位数",
+					data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
+				}, {
+					name: "调查期总岗位数",
+					data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
+				}, {
+					name: "岗位变化总数",
+					data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+				}, {
+					name: "岗位减少总数",
+					data: [20, 21, 30, 15, 16, 18, 25, 22, 31, 32, 35, 36]
+				}]
+			});
+		});
+	</script>
 </head>
 	
 <body>
@@ -15,6 +74,10 @@
 		<div class="head">
 			<div></div>
 			<span>对比分析</span>
+		</div>
+		
+		<div class="title">
+			<div id="picture" style="min-width:700px;height:400px"></div>
 		</div>
 	
 	</div>
