--- a/前端/sampling.html
+++ b/前端/sampling.html
@@ -1,24 +1,78 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+	<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
+	<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
 	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="css/sampling.css" media="screen" type="text/css" />
+	<script>
+		$(function () {
+		$("#picture").highcharts({
+				chart: {
+					plotBackgroundColor: null,
+					plotBorderWidth: null,
+					plotShadow: false
+				},
+				title: {
+					text: "各市企业数量占比"
+				},
+				tooltip: {
+					pointFormat: "{series.name}: <b>{point.percentage:.1f}%</b>"
+				},
+				plotOptions: {
+					pie: {
+						allowPointSelect: true,
+						cursor: "pointer",
+						dataLabels: {
+							enabled: true,
+							color: "#000000",
+							connectorColor: "#000000",
+							format: "<b>{point.name}</b>: {point.percentage:.1f} %"
+						}
+					}
+				},
+				series: [{
+					type: "pie",
+					name: "Browser share",
+					data: [
+						["青岛",   45.0],
+						["济南",       26.8],
+						{
+							name: "淄博",
+							y: 12.8,
+							sliced: true,
+							selected: true
+						},
+						["德州",    8.5],
+						["烟台",     6.2],
+						["潍坊",   0.7]
+					]
+				}]
+			});
+		});
+	</script>
 </head>
-	
-<body>
 
+<body>
 	<div class="container">
-	
+		
 		<div class="head">
 			<div></div>
 			<span>取样分析</span>
 		</div>
-	
+		
+		<div class="title">
+			<div id="picture" style="min-width:700px;height:400px"></div>
+		</div>
+		
 	</div>
 
 </body>
-
 </html>
