用户角色管理页面

--- a/前端/province.html
+++ b/前端/province.html
@@ -71,7 +71,7 @@
 					<ul class="submenu" id="u4">
 					<li><a href="SubmitTime.html" target="inform">上报时限</a></li>
 					<li><a href="UserManage.html" target="inform">用户管理</a></li>
-					<li><a href="#">角色管理</a></li>
+					<li><a href="CharcatorManage.html" target="inform">角色管理</a></li>
 					<li><a href="#">系统监控</a></li>
 					</ul>
 				</li>
