--- a/前端/detail.html
+++ b/前端/detail.html
@@ -10,6 +10,7 @@
 	</head>
 
 	<body>
+		<div class="container">
 		<div class="head">
 			<div></div>
 			<span>完善企业信息</span>
@@ -134,5 +135,6 @@
 				</tr>
 			</table>
 		</form>
+		</div>
 	</body>
 </html>
