--- a/前端/survey.html
+++ b/前端/survey.html
@@ -11,6 +11,7 @@
 	</head>
 	
 	<body>
+		<div class="container">
 		<div class="head">
 			<div></div>
 			<span>调查期：3月到4月</span>
@@ -105,5 +106,6 @@
 				</tr>
 			</table>
 		</form>
+		</div>
 	</body>
 </html>
