--- a/前端/survey.html
+++ b/前端/survey.html
@@ -2,6 +2,9 @@
 	<head>
 		<title>山东省人力资源市场数据采集系统</title>
 		<link rel="stylesheet" href="css/Survey.css" media="screen" type="text/css" />
+		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 		<script>
 			function changePage()
 			{
@@ -11,101 +14,61 @@
 	</head>
 	
 	<body>
-		<div class="container">
+		<div id="container">
 		<div class="head">
 			<div></div>
 			<span>调查期：3月到4月</span>
 		</div>
-		<form name="InputSurvey" action="" method="">
-			<table id="information" border="0" align="center">
+		<form class="sform" name="InputSurvey" action="" method="">
+			<table>
 				<tr>
-					<td>
-						*建档期就业人数：
-						<br />
-						<input type="text" name="Filling"/>
-					</td>
+					<td>*建档期就业人数</td>
+					<td><input type="text" id="start" name="start"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						*调查期就业人数：
-						<br />
-						<input type="text" name="Survey"/>
-					</td>
+					<td>*调查期就业人数</td>
+					<td><input type="text" id="now" name="now"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						*其他原因：
-						<br />
-						<input type="text" name="Other"/>
-					</td>
+					<td>*其他原因</td>
+					<td><input type="text" id="reason" name="reason"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						就业人数减少类型：
-						<br />
-						<input type="text" name="Reduce"/>
-					</td>
+					<td>就业人数减少类型</td>
+					<td><input type="text" id="type" name="type"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						主要原因：
-						<br />
-						<input type="text" name="Main"/>
-					</td>
+					<td>主要原因</td>
+					<td><input type="text" id="reason1" name="reason1"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						主要原因说明：
-						<br />
-						<input type="text" name="MainInterpretion"/>
-					</td>
+					<td>主要原因说明</td>
+					<td><input type="text" id="explain1" name="explain1"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						次要原因：
-						<br />
-						<input type="text" name="Secondary"/>
-					</td>
+					<td>次要原因</td>
+					<td><input type="text" id="reason2" name="reason2"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						次要原因说明：
-						<br />
-						<input type="text" name="SecondaryInterpretion"/>
-					</td>
+					<td>次要原因说明</td>
+					<td><input type="text" id="explain2" name="explain2"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						第三原因：
-						<br />
-						<input type="text" name="Third"/>
-					</td>
+					<td>第三原因</td>
+					<td><input type="text" id="reason3" name="reason3"/></td>
 				</tr>
-
 				<tr>
-					<td>
-						第三原因说明：
-						<br />
-						<input type="text" name="ThridInterpretion"/>
-					</td>
-				</tr>
-
-				<tr>
-					<td>
-						<input type="submit" value="提交"/>
-						<input type="button" value="返回" onclick="changePage()"/>
-					</td>
+					<td>第三原因说明</td>
+					<td><input type="text" id="explain3" name="explain3"/></td>
 				</tr>
 			</table>
 		</form>
+		
+		<div class="i-footer">
+				<input style="width:80px;" type="submit" id="done" name="done" value="完成"/>
+				<input style="width:80px;" type="submit" id="exit" name="exit" value="取消"/>
+		</div>
+		
 		</div>
 	</body>
 </html>
