--- a/前端/province.html
+++ b/前端/province.html
@@ -48,7 +48,7 @@
 					<div class="link" onclick="change(1)"><i class="fa fa-table"></i>报表管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u1">
 					<li><a href="ReportDetail.html" target="inform">审核报表</a></li>
-					<li><a href="#">数据汇总</a></li>
+					<li><a href="DataGather.html" target="inform">数据汇总</a></li>
 					</ul>
 				</li>
 				<li id="l2">
@@ -72,7 +72,7 @@
 					<li><a href="SubmitTime.html" target="inform">上报时限</a></li>
 					<li><a href="UserManage.html" target="inform">用户管理</a></li>
 					<li><a href="CharcatorManage.html" target="inform">角色管理</a></li>
-					<li><a href="#">系统监控</a></li>
+					<li><a href="SystemMonitoring.html" target="inform">系统监控</a></li>
 					</ul>
 				</li>
 			</ul>
