--- a/前端/sampling.html
+++ b/前端/sampling.html
@@ -7,9 +7,9 @@
 	<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
-	<script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-	<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
-	<script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
+	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="js/highcharts.js"></script>
+	<script type="text/javascript" src="js/exporting.js"></script>
 	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
 	<link rel="stylesheet" href="css/sampling.css" media="screen" type="text/css" />
 	<script>
