--- a/前端/AuditReport.html
+++ b/前端/AuditReport.html
@@ -33,31 +33,31 @@
 		</div>
 		
 		<div class="content">
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='ReportDetail.html'">
 				<span>1</span>
 				<span style="width:300px;">企业名</span>
 				<span style="width:100px;">2016年3月</span>
 				<span style="width:100px;">未审核</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='ReportDetail.html'">
 				<span>2</span>
 				<span style="width:300px;">企业名</span>
 				<span style="width:100px;">2016年3月</span>
 				<span style="width:100px;">审核通过</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='ReportDetail.html'">
 				<span>3</span>
 				<span style="width:300px;">企业名</span>
 				<span style="width:100px;">2016年3月</span>
 				<span style="width:100px;">退回修改</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='ReportDetail.html'">
 				<span>4</span>
 				<span style="width:300px;">企业名</span>
 				<span style="width:100px;">2016年3月</span>
 				<span style="width:100px;">上报</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='ReportDetail.html'">
 				<span>5</span>
 				<span style="width:300px;">企业名</span>
 				<span style="width:100px;">2016年3月</span>
