--- a/前端/province.html
+++ b/前端/province.html
@@ -41,13 +41,13 @@
 				<li id="l0">
 					<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u0">
-					<li><a href="CompanyDetail.html" target="inform">企业备案查询</a></li>
+					<li><a href="CompanyReference.html" target="inform">企业备案查询</a></li>
 					</ul>
 				</li>
 				<li id="l1">
 					<div class="link" onclick="change(1)"><i class="fa fa-table"></i>报表管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u1">
-					<li><a href="ReportDetail.html" target="inform">审核报表</a></li>
+					<li><a href="AuditReport.html" target="inform">审核报表</a></li>
 					<li><a href="DataGather.html" target="inform">数据汇总</a></li>
 					</ul>
 				</li>
@@ -62,7 +62,7 @@
 				<li id="l3">
 					<div class="link" onclick="change(3)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u3">
-					<li><a href="NoticeDetail.html" target="inform">查看通知</a></li>
+					<li><a href="notice.html" target="inform">查看通知</a></li>
 					<li><a href="PublishNotice.html" target="inform">发布通知</a></li>
 					</ul>
 				</li>
