--- a/前端/CompanyReference.html
+++ b/前端/CompanyReference.html
@@ -9,6 +9,8 @@
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
 	<link rel="stylesheet" href="css/CompanyReference.css" media="screen" type="text/css" />
+	<script src="js/select.js"></script>
+	<script src="js/jquery-2.0.0.min.js"></script>
 </head>
 
 <body>
@@ -34,35 +36,35 @@
 		</div>
 		
 		<div class="content">
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CompanyDetail.html'">
 				<span style="width:50px;">1</span>
 				<span style="width:400px;">XX企业</span>
 				<span>山东济南</span>
 				<span>私企</span>
 				<span>家私</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CompanyDetail.html'">
 				<span style="width:50px;">2</span>
 				<span style="width:400px;">XX企业</span>
 				<span>山东济南</span>
 				<span>私企</span>
 				<span>家私</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CompanyDetail.html'">
 				<span style="width:50px;">3</span>
 				<span style="width:400px;">XX企业</span>
 				<span>山东济南</span>
 				<span>私企</span>
 				<span>家私</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CompanyDetail.html'">
 				<span style="width:50px;">4</span>
 				<span style="width:400px;">XX企业</span>
 				<span>山东济南</span>
 				<span>私企</span>
 				<span>家私</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CompanyDetail.html'">
 				<span style="width:50px;">5</span>
 				<span style="width:400px;">XX企业</span>
 				<span>山东济南</span>
