--- a/前端/notice.html
+++ b/前端/notice.html
@@ -31,21 +31,25 @@
 		</div>
 		
 		<div class="content">
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='NoticeDetail.html'">
 				<span>1</span>
 				<span style="width:300px;">标题</span>
 				<span>省</span>
-				<span>2016/03/24</span>
+				<span style="width:100px;">2016/03/24</span>
+				<a href="notice.html">删除</a>
+				<a href="PublishNotice.html">修改</a>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='NoticeDetail.html'">
 				<span>2</span>
 				<span style="width:300px;">标题</span>
 				<span>省</span>
 				<span style="width:100px;">2016/03/24</span>
+				<a href="notice.html">删除</a>
+				<a href="PublishNotice.html">修改</a>
 			</div>
 		</div>
 		
-		<div class="i-foot">
+		<div class="i-foot" style="display:none;">
 			<input type="submit" id="del" name="del" value="删除"/>
 			<input type="submit" id="modify" name="modify" value="修改"/>
 			<input type="submit" id="new" name="new" value="新建"/>
