企业用户查看已提交的调查期表格

--- a/前端/CheckEachSurvey.html
+++ b/前端/CheckEachSurvey.html
@@ -1,46 +1,90 @@
 ﻿<html>
+	<head>
+		<style type="text/css">
+			#back{
+				width:100px;
+				height:30px;
+				margin-right:30px;
+				background-color:#db4544;
+				color:#fff;
+				font-family:Microsoft YaHei;
+				border:solid 1px #db4544;
+				cursor:pointer;
+				border-radius:3px;
+			}
+		</style>
+		<script>
+			function changePage()
+			{
+				window.location.href="CheckSurvey.html";
+			}
+		</script>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title></title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="css/ReportDetail.css" media="screen" type="text/css" />
+	</head>
+
 	<body>
-		<table id="information" border="1" cellpadding="5" align="center">
-			<tr>
-				<td>建档期就业人数</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>调查期就业人数</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>其他原因</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>就业人数减少类型</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>主要原因</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>主要原因说明</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>次要原因</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>次要原因说明</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>第三原因</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td>第三原因说明</td>
-				<td>&nbsp;</td>
-			</tr>
-		</table>
+	
+		<div class="container">
+			
+			<div class="head">
+				<div></div>
+				<span><a href="CheckSurvey.html">已提交的调查期表格</a></span>
+				<span>&nbsp;>&nbsp;</span>
+				<span>XX调查期</span>
+			</div>
+			
+			<div class="title">
+				<span style="width:150px;">数据项</span>
+				<span style="width:500px;">内容</span>
+			</div>
+			
+			<div class="content">
+				<div class="cstyle">
+					<span style="width:150px;">建档期就业人数</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">调查期就业人数</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">其他原因</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">就业人数减少类型</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">主要原因</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">主要原因说明</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">次要原因</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">次要原因说明</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">第三原因</span>
+					<span style="width:500px;"></span>
+				</div>
+				<div class="cstyle">
+					<span style="width:150px;">第三原因说明</span>
+					<span style="width:500px;"></span>
+				</div>
+			</div>
+			
+		</div>
+
 	</body>
 </html>
