--- a/前端/CheckSurvey.html
+++ b/前端/CheckSurvey.html
@@ -33,19 +33,19 @@
 		</div>
 		
 		<div class="content">
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CheckEachSurvey.html'">
 				<span style="width:50px;">1</span>
 				<span style="width:400px;">3月调查期表格</span>
 				<span>3月份</span>
 				<span>2016.3.26</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CheckEachSurvey.html'">
 				<span style="width:50px;">2</span>
 				<span style="width:400px;">4月调查期表格</span>
 				<span>四月份</span>
 				<span>2016.4.10</span>
 			</div>
-			<div class="cstyle">
+			<div class="cstyle" onclick="location='CheckEachSurvey.html'">
 				<span style="width:50px;">3</span>
 				<span style="width:400px;">5月份调查期表格</span>
 				<span>五月份</span>
