登录和注销登陆小改

--- a/前端/province.html
+++ b/前端/province.html
@@ -26,7 +26,7 @@
 		<span id="name"><a style="text-decoration:none; color:#fff;" href="#" onclick="exit()">当前用户：Bigblack(省级)</a></span>
 	</div>
 	
-	<a style="text-decoration:none; color:#fff;" href="#"><div id="exit">退出登录</div></a>
+	<a style="text-decoration:none; color:#fff;" href="login.html"><div id="exit">退出登录</div></a>
 	
 	<script type="text/javascript">
 		function exit(){
