添加市用户

--- a/前端/city.html
+++ b/前端/city.html
@@ -23,6 +23,7 @@
 	<div id="header">
 		<div id="logo"></div>
 		<span id="title">山东省人力资源市场数据采集系统</span>
+		<span id="name"><a style="text-decoration:none; color:#fff;" href="#" onclick="exit()">当前用户：Bigblack(市级)</a></span>
 	</div>
 	
 	<a style="text-decoration:none; color:#fff;" href="#"><div id="exit">退出登录</div></a>
@@ -61,8 +62,7 @@
 				<li id="l3">
 					<div class="link" onclick="change(3)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u3">
-					<li><a href="sub/notice.html" target="inform">查看通知</a></li>
-					<li><a href="sub/PublishNotice.html" target="inform">发布通知</a></li>
+					<li><a href="sub/CityNotice.html" target="inform">查看通知</a></li>
 					</ul>
 				</li>
 			</ul>
