查询按钮和显示全部按钮

--- a/前端/sub/CompanyReference.html
+++ b/前端/sub/CompanyReference.html
@@ -25,6 +25,8 @@
 		<div class="query">
 			<span>查询</span>
 			<input type="text" id="query" name="query"/>
+			<input type="button" id="ensure" value="确定"></input>
+			<input type="button" id="ensure" value="显示全部"></input>
 		</div>
 		
 		<div class="title">
