--- a/前端/sub/CheckSurvey.html
+++ b/前端/sub/CheckSurvey.html
@@ -8,7 +8,7 @@
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/notice.css" media="screen" type="text/css" />
-	<link rel="stylesheet" href="css/CompanyReference.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="css/CheckSurvey.css" media="screen" type="text/css" />
 </head>
 
 <body>
@@ -23,6 +23,8 @@
 		<div class="query">
 			<span>查询</span>
 			<input type="text" id="query" name="query"/>
+			<input type="button" id="ensure" onclick="" value="确定"/>
+			<input type="button" id="ensure" onclick="" value="显示全部"></input>
 		</div>
 		
 		<div class="title">
